--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 quarkus.http.port=9082
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=S3cr3t
+quarkus.datasource.password=secret
 #quarkus.datasource.jdbc.url=jdbc:postgresql://pg2-srv:5433/postgres
-quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/postgres
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5434/sui8kpdb
 quarkus.datasource.jdbc.max-size=8
 quarkus.datasource.jdbc.min-size=2
 
 quarkus.hibernate-orm.database.generation=drop-and-create
-#quarkus.hibernate-orm.sql-load-script=import.sql
